trunk/query/ConditionBNF.txt
<pair>                     ::= "{" <pair-comparison> | <null-comparison> | <in-comparison> | <condition-list> "}"
<pair-comparison>          ::= <comparison-operator> ":" "{" <string> ":" <value> "}"
<null-comparison>          ::= <null-comparison-operator> ":" "{" <string> ":" null "}"
<in-comparison>            ::= <in-comparison-operator> ":" "{" <string> ":" "[" <value> {"," <value>} "]" "}"
<condition-list>           ::= <boolean-operator> ":" "[" <pair> {"," <pair>} "]"
<comparison-operator>      ::= "$eq" | "$neq" | "$lt" | "$lte" | "$gt" | "$gte"
<in-comparison-operator>   ::= "$in"
<null-comparison-operator> ::= "$is" | "$isnt"
<boolean-operator>         ::= "$and" | "$or"
<value>                    ::= <string> | <number>
